--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -16,7 +16,7 @@ events {
 
 http {
     # 设置默认 lua 搜索路径，添加 lua 路径
-    lua_package_path 'lua/?.lua;/blah/?.lua;;';
+    lua_package_path '/usr/local/openresty/nginx/lua/?.lua;/blah/?.lua;;';
 
     # 对于开发研究，我们可以对代码 cache 进行关闭，这样我们不必每次都重新加载nginx
     lua_code_cache off;
@@ -47,26 +47,26 @@ http {
 
         location ~ ^/rcsapi/([-_a-zA-Z0-9/]+)/([-_a-zA-Z0-9/]+) {
             # 准入阶段完成参数验证
-            access_by_lua_file  lua/rcsapi/access_check.lua;
+            access_by_lua_file  /usr/local/openresty/nginx/lua/rcsapi/access_check.lua;
 
             # 内容生成阶段
-            content_by_lua_file lua/rcsapi/$1_$2.lua;
+            content_by_lua_file /usr/local/openresty/nginx/lua/rcsapi/$1_$2.lua;
         }
 
         location ~ ^/peerapi/([-_a-zA-Z0-9/]+)/([-_a-zA-Z0-9/]+) {
             # 准入阶段完成参数验证
-            access_by_lua_file  lua/peerapi/access_check.lua;
+            access_by_lua_file  /usr/local/openresty/nginx/lua/peerapi/access_check.lua;
 
             # 内容生成阶段
-            content_by_lua_file lua/peerapi/$1_$2.lua;
+            content_by_lua_file /usr/local/openresty/nginx/lua/peerapi/$1_$2.lua;
         }
 
         location ~ ^/trackapi/([-_a-zA-Z0-9/]+)/([-_a-zA-Z0-9/]+) {
             # 准入阶段完成参数验证
-            access_by_lua_file  lua/trackapi/access_check.lua;
+            access_by_lua_file  /usr/local/openresty/nginx/lua/trackapi/access_check.lua;
 
             # 内容生成阶段
-            content_by_lua_file lua/trackapi/$1_$2.lua;
+            content_by_lua_file /usr/local/openresty/nginx/lua/trackapi/$1_$2.lua;
         }
 
         error_page   500 502 503 504  /50x.html;
