--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -34,6 +34,7 @@ http {
 
     keepalive_timeout  65;
 
+    init_worker_by_lua_file /usr/local/openresty/nginx/lua/cronwork/init_cronwork.lua;
     server {
         listen       80;
         server_name  localhost;
